# voxengine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/voxengine/: version.hh
include/voxengine/math/: abstract_matrix.hh  abstract_vector.hh
src/: CMakeLists.txt  version.cc
src/math/: CMakeLists.txt  dummy.cc  matrix.hh  matrix.hxx  vector.hh  vector.hxx
